RESOLVED FIXED165446
MediaDocuments crash with modern media controls
https://bugs.webkit.org/show_bug.cgi?id=165446
Summary MediaDocuments crash with modern media controls
Dean Jackson
Reported 2016-12-05 18:10:39 PST
MediaDocuments crash with modern media controls
Attachments
Patch (4.89 KB, patch)
2016-12-05 18:13 PST, Dean Jackson
graouts: review+
Dean Jackson
Comment 1 2016-12-05 18:11:10 PST
Dean Jackson
Comment 2 2016-12-05 18:13:59 PST
Dean Jackson
Comment 3 2016-12-05 18:21:07 PST
Note You need to log in before you can comment on or make changes to this bug.