MediaDocuments crash with modern media controls https://bugs.webkit.org/show_bug.cgi?id=165446 <rdar://problem/29524959>

Reviewed by Antoine Quint.

Source/WebCore:

The modern media controls inject a <style> element into
the document, which exposed a bug when used in MediaDocuments.
Such documents were not getting a charset, and the hash table
for the CSSParserContexts was crashing.

Test: media/modern-media-controls/media-documents/insert-style-should-not-crash.html

* css/parser/CSSParserMode.h: Guard against an empty charset.
(WebCore::CSSParserContextHash::hash):
* dom/InlineStyleSheetOwner.cpp: Ask for the charset with fallback.
(WebCore::parserContextForElement):

LayoutTests:

* media/modern-media-controls/media-documents/insert-style-should-not-crash-expected.txt: Added.
* media/modern-media-controls/media-documents/insert-style-should-not-crash.html: Added.

Canonical link: https://commits.webkit.org/183043@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209373 268f45cc-cd09-0410-ab3c-d52691b4dbfc